[project]
name = "sax-bridge"
description = "ComfyUI custom nodes for Pipe-based workflow management, Wildcard/LoRA prompting, Precision Detailer, and Masked Noise Injection."
version = "1.0.0"
license = { file = "LICENSE" }
requires = ["comfyui-impact-pack"]
dependencies = []

[project.urls]
Repository = "https://github.com/so16tm/SAX_Bridge"

[tool.comfy]
PublisherId = "so16tm"
DisplayName = "SAX Bridge"
Icon = ""
