[project]
name = "sax-bridge"
description = "ComfyUI custom nodes for Pipe-based workflow management, KSampler, Detailer, Upscaler, SAM3 segmentation, Toggle Manager, and Collector nodes."
version = "2.0.0"
license = { file = "LICENSE" }
requires = []
dependencies = []

[project.optional-dependencies]
wildcards = ["comfyui-impact-pack"]

[project.urls]
Repository = "https://github.com/so16tm/SAX_Bridge"

[tool.pytest.ini_options]
testpaths = ["tests/python"]

[tool.comfy]
PublisherId = "so16tm"
DisplayName = "SAX Bridge"
Icon = "https://raw.githubusercontent.com/so16tm/SAX_Bridge/main/docs/images/icon.png"
